src/objects/View_Widget__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <referenceTo>View__c</referenceTo>
        <relationshipName>ViewWidgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Widget__c</fullName>
        <label>Widget</label>
        <referenceTo>Widget__c</referenceTo>
        <relationshipName>ViewWidgets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>View Widget</label>
    <nameField>
        <displayFormat>VW-{00000}</displayFormat>
        <label>View Widget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>View Widgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>